@@ -1,3 +1,4 @@
+04. Apr. 2012 - amo -  fixed bug with reassignment of components in perspective when switching between perspectives
 02. Apr. 2012 - amo -  updated to version number 1.05
 02. Apr. 2012 - amo -  renamed all *.javafx2.* packages to *.javafx.*
 01. Apr. 2012 - amo -  AFXComponent, AStatefulCallbackComponent and AStatelessCompnent extending AFXSubComponent
